--- a/app/views/csv/upload.html.erb
+++ b/app/views/csv/upload.html.erb
@@ -1,5 +1,8 @@
+<br><br>
 <%= form_tag "/csv/update", :method => "post", :multipart => true do %>
 	<%= file_field_tag "csv" %>
 	<br/>
 	<%= submit_tag  "upload" %>
+	
 <% end -%>
+<br style="clear:both" /> 
