done with allowing conducting of followup interview  On branch master 	modified:   app/controllers/followup_interviews_controller.rb 	modified:   app/models/interview.rb 	modified:   app/views/followup_interviews/_form.html.erb 	modified:   app/views/schedule_entries/index.html.erb 	new file:   db/migrate/20120513174335_add_interview_id_to_followup_interviews.rb 	modified:   db/schema.rb

--- a/app/views/followup_interviews/_form.html.erb
+++ b/app/views/followup_interviews/_form.html.erb
@@ -13,12 +13,18 @@
 
   <div class="field">
     <%= f.label :comments %><br />
-    <%= f.text_field :comments %>
+    <%= f.text_area :comments, :cols => 50 %>
   </div>
   <div class="field">
     <%= f.label :planned_intervention %><br />
-    <%= f.text_field :planned_intervention %>
+    <%= f.text_area :planned_intervention, :cols => 50 %>
   </div>
+  <%= fields_for @interview do |ff| %>
+    <%= ff.hidden_field :user_id, :value => @interview.user_id %>
+    <%= ff.hidden_field :student_id, :value => @interview.student_id.to_s %>
+    <%= ff.hidden_field :period_id, :value => @interview.period_id %>
+    <%= ff.hidden_field :interview_type_id, :value => @interview.interview_type_id %>
+  <% end -%>
   <div class="actions">
     <%= f.submit %>
   </div>
