done with adding a new routine interview  On branch master 	new file:   controllers/routine_interviews_controller.rb 	modified:   views/followup_interviews/new.html.erb 	new file:   views/routine_interviews/_form.html.erb 	new file:   views/routine_interviews/new.html.erb 	new file:   views/routine_interviews/show.html.erb 	modified:   views/schedule_entries/index.html.erb 	new file:   views/users/sectionupdate.html.erb 	modified:   ../config/routes.rb

--- a/app/views/followup_interviews/new.html.erb
+++ b/app/views/followup_interviews/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New followup_interview</h1>
+<h1>New Followup Interview</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', followup_interviews_path %>
