can now show followup interviews conducted  On branch master 	modified:   app/controllers/followup_interviews_controller.rb 	modified:   app/controllers/interviews_controller.rb 	modified:   app/controllers/students_controller.rb 	modified:   app/models/followup_interview.rb 	modified:   app/views/followup_interviews/_form.html.erb 	modified:   app/views/followup_interviews/show.html.erb 	modified:   app/views/interviews/index.html.erb 	modified:   app/views/interviews/show.html.erb 	modified:   app/views/students/show.html.erb 	new file:   db/migrate/20120514061001_add_nature_of_problem_type_id_to_followup_interviews.rb 	modified:   db/schema.rb 	modified:   db/seeds.rb

--- a/app/views/followup_interviews/_form.html.erb
+++ b/app/views/followup_interviews/_form.html.erb
@@ -10,7 +10,11 @@
       </ul>
     </div>
   <% end %>
-
+  <div class="field">
+    <%= f.label :nature_of_problem_type_id %><br />
+    <%= f.collection_select :nature_of_problem_type_id, @nature_of_problem_types , :id, :name %>
+  </div>
+  <br/>
   <div class="field">
     <%= f.label :comments %><br />
     <%= f.text_area :comments, :cols => 50 %>
@@ -25,6 +29,7 @@
     <%= ff.hidden_field :period_id, :value => @interview.period_id %>
     <%= ff.hidden_field :interview_type_id, :value => @interview.interview_type_id %>
   <% end -%>
+  <br/>
   <div class="actions">
     <%= f.submit %>
   </div>
