--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -3,7 +3,7 @@
 				<span id="arrow"> > </span>
 				<a href="studentprofile.html"> Student Profile</a>
 				<br/>
-				<span id="student">Aron Fyodor Asor</span>
+				<span id="student"><%= @name %></span>
 			</div>
 			
 			
@@ -16,8 +16,7 @@
 						<li><a href="studentprofile.html">Personal Information</a></li>
 						<li><a href="informationaboutfamily.html">Information About Family</a></li>
 						<li><a href="acad.html">Academic History</a></li>
-						<li><a href="routine_int.html">Routine Interviews</a></li>
-						<li><a href="counselor_notations.html">Counselor Notations</a></li>
+            <li><%= link_to "Interviews", interviews_path(:student_id => @student.id) %></li>
 					</ul>
 				</div>
 				
