added period labels  On branch master 	modified:   app/models/period.rb 	modified:   app/views/schedule_entries/edit.html.erb 	modified:   app/views/schedule_entries/index.html.erb

--- a/app/views/schedule_entries/index.html.erb
+++ b/app/views/schedule_entries/index.html.erb
@@ -1,6 +1,7 @@
 <div id="sched">
 					<table>
 						<tr id="headname">
+							<td>Period</td>
 							<td>Monday</td>
 							<td>Tuesday</td>
 							<td>Wednesday</td>
@@ -9,6 +10,7 @@
 						</tr>
 						<% @grouped_periods.each do |period_group| %>
 							<tr>
+								<td><%= cycle *Period.labels %></td>
 								<% period_group.each do |period| %>
 									<% entry = period.schedule_entries.find {|entry| entry.user == current_user } %>
 									<% interview = period.interviews.find {|interview| interview.user == current_user} %>
