added pagination to show section action  On branch master 	modified:   app/controllers/sections_controller.rb 	modified:   app/views/sections/show.html.erb

--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -9,7 +9,8 @@
 		<!-- the only area you can edit-->
 		
 			<div id="viewstudent">
-				<p>
+	<p>
+	<%= paginate @students %>
   <b>Counselor:</b>
   <% counselor = @section.user %>
   <% if counselor.nil? %>
