tweaked pagination on student index  On branch master
	modified:   app/assets/stylesheets/mainstyle.css
	new file:   app/assets/stylesheets/pagination.css
	new file:   app/assets/stylesheets/periods.css.scss
	modified:   app/views/students/index.html.erb

--- a/app/assets/stylesheets/mainstyle.css
+++ b/app/assets/stylesheets/mainstyle.css
@@ -223,30 +223,34 @@ padding-left: 10px;
 
 /*query
 ***************/
-#query{
-float:left;
-clear: right;
-padding-top: 20px;
+.query{
+padding-top: 50px;
 padding-left: 20px;
 }
 
-#query table{
+.query table{
 width:700px;
 }
 
-#query td{
+.query td{
 
 }
-#query a{
+.query a{
 text-decoration: none;
 }
 
-#query ul{
+.query ul{
 list-style: none;
 }
 
-#query li{
+.query li{
 display: inline;
+}
+
+nav.pagination {
+	margin: auto auto;
+	text-align: center;
+	float: center;
 }
 
 #directions{
