--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -7,69 +7,9 @@
 			
 		<!-- the only area you can edit-->
 		
-			<div id="query">
-			
-			<table>
-				<tr>
-					<td class="label">Search Student:</td>
-					<td>
-						<input type="text" size="40" name="searchbar" id="searchbar">
-						<input type="button" value="search" name="searchbutt" id="searchbutt">
-					</td>
-				</tr>
-
-				<tr>
-					<td></td>
-					<td><span id="directions">Input name, year/section or id number*</span></td>
-				</tr>
-				
-				<tr>
-				</tr>
-				
-				<tr>
-					<td class="label">Name:</td>
-					<td>
-						<ul>
-							<li><a href="#">A</a></li>
-							<li><a href="#">B</a></li>
-							<li><a href="#">C</a></li>
-							<li><a href="#">D</a></li>
-							<li><a href="#">E</a></li>
-							<li>...</li>
-						</ul>
-					</td>
-				</tr>
-				
-				<tr>
-					<td class="label">Year:</td>
-					<td>
-						<ul>
-							<li><a href="#">1</a></li>
-							<li><a href="#">2</a></li>
-							<li><a href="#">3</a></li>
-							<li><a href="#">4</a></li>
-						</ul>
-					</td>
-				</tr>
-
-				<tr>
-					<td class="label">Page:</td>
-					<td>
-						<ul>
-							<li><a href="#">1</a></li>
-							<li><a href="#">2</a></li>
-							<li><a href="#">3</a></li>
-							<li><a href="#">4</a></li>
-							<li><a href="#">5</a></li>
-							<li><a href="#">6</a></li>
-							<li><a href="#">7</a></li>
-							<li><a href="#">8</a></li>
-							<li>...</li>
-						</ul>
-					</td>
-				</tr>
-				
-			</table>
+			<div class="query">
+			<br/>
+			<br/>
 			<%= paginate @students %>
 			</div>
 		
@@ -100,7 +40,10 @@
             </tr>
         <% end -%>
    </table>
-			</div>
+   <div class="query">
+		<%= paginate @students %>
+	</div>
+	</div>
 			
 					
 		<!-- the only area you can edit-->
