fixed edit section url to actually point to the counselor to be edited  On branch master 	modified:   app/views/users/sectionedit.html.erb 	modified:   app/views/users/show.html.erb

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
 					 <li><%= link_to "Edit Profile", edit_user_path(@user) %></li>
 					<% end -%>
 					<% if current_user.role == 'Head Counselor' %>
-					 <li><%= link_to "Edit Sections", { :controller => "users", :action => "sectionedit", :id => current_user.id} %></li>
+					 <li><%= link_to "Edit Sections", { :controller => "users", :action => "sectionedit", :id => @user.id} %></li>
 				 <% end -%>
 				</ul>
 			</td>
