--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for(@student), :html => { :multipart => true } do |f| %>
+
+<%= form_for @student, :html => { :multipart => true } do |f| %>
   <% if @student.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@student.errors.count, "error") %> prohibited this student from being saved:</h2>
