--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,31 +1,62 @@
-<div id="profile">
-	<div id="graypart">
-	<table>
-		<tr>
-			<td id="profhead" colspan="2">
-				<ul id="head_bitch">
-					<% if @user == current_user %>
-					 <li><%= link_to "Edit Profile", edit_user_path(@user) %></li>
-					<% end -%>
-					<% if current_user.role == 'Head Counselor' %>
-					 <li><%= link_to "Edit Sections", { :controller => "users", :action => "sectionedit", :id => @user.id} %></li>
-				 <% end -%>
-				</ul>
-			</td>
-		</tr>
-		<tr>
-			<td>Name:</td>
-			<td><%= @user.name %>
-			</td>
-		</tr>
-		<tr>
-			<td>E-mail Address:</td>
-			<td><%= @user.email %></td>
-		</tr>
-	</table>
-	</div>
-</div>
-
-<!-- the only area you can edit-->
+<div id="title">
+				<a href="viewcounselor.html">View Counselor Accounts </a>
+				<span id="arrow"> > </span>
+				<a href="counseloraccount.html"> Counselor Account</a>
+				<br/>
+				<span id="counselor">Juan Dela Cruz</span>
+			</div>
+			
+			
+		<!-- the only area you can edit-->
+		
+			<div id="counseloraccount">
 				
-<br style="clear:both" /> 
+				<div id="counselornav">
+					<ul>
+						<li><a href="counseloraccount.html">Profile</a></li>
+						<li><a href="weeklyplan.html">Weekly Plan</a></li>
+						<li><a href="performancesummary.html">Performance Summary</a></li>
+						<li><a href="updateaccount.html">Update Account</a></li>
+						<li><a href="studentassignments.html">Student Assignments</a></li>
+						<li><a href="createaccount.html">Create Account</a></li>
+					</ul>
+				</div>
+				
+				<!--EDIT FROM HERE ONLY FOR COUNSELOR ACCOUNT-->
+				
+				<div id="profile">
+					<div id="graypart">
+					<table>
+						<tr>
+							<td id="profhead" colspan="2">
+								<ul id="head_bitch">
+									<% if @user == current_user %>
+									 <li><%= link_to "Edit Profile", edit_user_path(@user) %></li>
+									<% end -%>
+									<% if current_user.role == 'Head Counselor' %>
+									 <li><%= link_to "Edit Sections", { :controller => "users", :action => "sectionedit", :id => @user.id} %></li>
+								 <% end -%>
+								</ul>
+							</td>
+						</tr>
+						<tr>
+							<td>Name:</td>
+							<td><%= @user.name %>
+							</td>
+						</tr>
+						<tr>
+							<td>E-mail Address:</td>
+							<td><%= @user.email %></td>
+						</tr>
+					</table>
+					</div>
+				</div>
+				
+				<!--EDIT FROM HERE ONLY FOR COUNSELOR ACCOUNT-->
+				
+			</div>
+			
+					
+		<!-- the only area you can edit-->
+				
+		<br style="clear:both" /> 
