--- a/app/views/guardians/edit.html.erb
+++ b/app/views/guardians/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing guardian</h1>
+<div id="profile">
+	<%= render 'form' %>
+</div>
 
-<%= render 'form' %>
+<br style="clear:both" /> 
 
-<%= link_to 'Show', @guardian %> |
-<%= link_to 'Back', guardians_path %>
