fixed changing of section, and redirect to student list if counselor not allowed to edit/view  On branch master 	modified:   app/controllers/students_controller.rb 	modified:   app/views/students/_form.html.erb

--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -29,7 +29,7 @@
   </div>
   <div class="field">
     <%= f.label :section_id %><br />
-    <%= f.number_field :section_id %>
+    <%= f.collection_select :section_id , Section.all, :id, :name %>
   </div>
   <div class="field">
     <%= f.label :nickname %><br />
