--- a/app/views/students/_general_info.html.erb
+++ b/app/views/students/_general_info.html.erb
@@ -5,6 +5,10 @@
       <td id="profhead" colspan="2"><%= link_to 'Edit', edit_student_path(@student) %>
     </tr>
     <tr>
+      <td class="label1">Picture:</td>
+      <td><%= image_tag @student.photo(:thumbnail) %></td>
+    </tr>
+    <tr>
       <td class="label1">Name:</td>
       <td> <%= [@student.first_name, @student.middle_name + '.', @student.last_name].join ' ' %>
       </td>
