--- a/app/views/students/_general_info.html.erb
+++ b/app/views/students/_general_info.html.erb
@@ -6,6 +6,7 @@
     </tr>
     <tr>
       <td class="label1">Picture:</td>
+      <td><%= image_tag @student.photo(:medium) %></td>
     </tr>
     <tr>
       <td class="label1">Name:</td>
