--- a/app/views/students/_family_info.html.erb
+++ b/app/views/students/_family_info.html.erb
@@ -41,6 +41,12 @@
         </td>
       </tr>
       <tr>
+        <td class="label1">Alma Mater/School:</td>
+        <td>
+          <%= guardian.alma_mater %>
+        </td>
+      </tr>
+      <tr>
         <td class="label1">Living:</td>
         <td>
           <%= guardian.is_living %>
